assets/layout: increase breakpoint size to md for multi col layout to avoid squashed look

--- a/liqd_product/assets/scss/components/_menu_layout.scss
+++ b/liqd_product/assets/scss/components/_menu_layout.scss
@@ -9,17 +9,17 @@
 }
 
 .l-menu__menu {
-    @extend .col-sm-3;
+    @extend .col-md-3;
 }
 
 .l-menu__content {
-    @extend .col-sm-9;
+    @extend .col-md-9;
 }
 
 .l-menu__content--aside {
-    @extend .col-sm-6;
+    @extend .col-md-6;
 }
 
 .l-menu__aside {
-    @extend .col-sm-3;
+    @extend .col-md-3;
 }
